<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView2"
    android:layout_width="310dp"
    android:layout_height="250dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="287dp"
        android:layout_height="216dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="42dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:scaleType="centerInside"
                    app:srcCompat="@mipmap/icon_launch_round" />

                <TextView
                    android:id="@+id/txtNome"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:fontFamily="sans-serif"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtifPreco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Preço"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtPreco"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtifQuantidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Quantidade"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtQuantidade"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:textAlignment="center" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tipo"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txttipo"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="2dp">

                <TextView
                    android:id="@+id/txtindescricao"
                    android:layout_width="wrap_content"
                    android:layout_height="73dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Desc"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescricao"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>